--- a/tdrop.1
+++ b/tdrop.1
@@ -120,6 +120,9 @@ Specifies the timeout in to wait for a window to appear when starting a program 
 .TP
 \fB --debug\fR
 Print information for debugging to stdout and to /tmp/tdrop_<user>/log. Takes no argument. (default: false)
+.TP
+\fB-r\fR, \fB --remember\fR
+Store window geometry when hiding and restore geometry when showing instead of using the specified -x, -y, -w, and -h arguments. Takes no argument. (default: false)
 \fB --help\fR
 Print basic help information. Takes no argument.
 
